Bug 1581187 - only shutdown remote Service Workers on browser shutdown r=asuth

Differential Revision: https://phabricator.services.mozilla.com/D48044