dom/serviceworkers/ServiceWorkerManager.cpp
@@ -503,7 +503,7 @@ void ServiceWorkerManager::MaybeStartShutdown() {
 
     for (auto it2 = it1.UserData()->mInfos.Iter(); !it2.Done(); it2.Next()) {
       RefPtr<ServiceWorkerRegistrationInfo> regInfo = it2.UserData();
-      regInfo->Clear();
+      regInfo->ShutdownWorkers();
     }
     it1.UserData()->mInfos.Clear();
   }
